@@ -1,5 +1,17 @@
 2011-05-26  Pedro Alves  <pedro@codesourcery.com>
 
+	* infcmd.c (finish_backward): Set a step-resume breakpoint at the
+	function's entry point instead of a manually managed momentary
+	breakpoint, and only ever issue one proceed call.
+	* infrun.c (handle_inferior_event) <BPSTAT_WHAT_STEP_RESUME>: If
+	doing a reverse-finish, switch to stepi mode, to do another step.
+	(insert_step_resume_breakpoint_at_sal): Make public.
+	(normal_stop): No need to save function value return registers if
+	going reverse.
+	* inferior.h (insert_step_resume_breakpoint_at_sal): Declare.
+
+2011-05-26  Pedro Alves  <pedro@codesourcery.com>
+
 	* breakpoint.h (enum bptype) <bp_hp_step_resume>: New.
 	(enum bpstat_what_main_action): Move BPSTAT_WHAT_STEP_RESUME
 	before BPSTAT_WHAT_STOP_SILENT.  Add BPSTAT_WHAT_HP_STEP_RESUME
